--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
-
+    
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -72,12 +72,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <section class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </section>
 </body>
 
 </html>
