--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
     
 <body>
-    <header class="header">
+    <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,7 +22,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
+        </div>
+    </div>
     </header>
     <div class="hero"></div>
     <main class="content">
